# rtc-aigc-embedded-demo

client/espressif/esp32s3_demo/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
client/espressif/esp32s3_demo/main/: AudioPipeline.c  AudioPipeline.h  CMakeLists.txt  Kconfig.projbuild  RtcBotUtils.c  VolcRTCDemo.c  idf_component.yml  network.c
